# OpenNeighbor

./: .gitignore  COMPLETION_SUMMARY.md  Dockerfile  FINAL_PUBLICATION_REPORT.md  FINAL_VERIFICATION_REPORT.md  GITHUB_PUBLICATION_READY.md  LICENSE  README.md  docker-compose.yml  openneighbor_cli.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
benchmarks/: __init__.py  performance.py
examples/: __init__.py  basic_usage.py
openneighbor/: __init__.py
openneighbor/core/: __init__.py
openneighbor/core/inference/: __init__.py  predictor.py
openneighbor/core/training/: __init__.py  trainer.py
openneighbor/core/utils/: __init__.py  config.py  logging.py
openneighbor/ui/: __init__.py  cli.py
tests/: __init__.py  test_basic.py
